non_executable_reasons_record_from_random_10k/1500.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
s = 'STRING'
print 'Place another string with a mod and s: %s' %(s)
------------------

[0;36m  File [0;32m"<ipython-input-1-2191e7a93d4c>"[0;36m, line [0;32m4[0m
[0;31m    print 'Place another string with a mod and s: %s' %(s)[0m
[0m                                                    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-2191e7a93d4c>, line 4)

Executability                            : False
